[gd_scene load_steps=5 format=3 uid="uid://c0qqv368xse86"]

[ext_resource type="FontFile" uid="uid://cor6msdnuxvqy" path="res://Assets/Fonts/comfortaa/Comfortaa-Bold.ttf" id="1_cyn4c"]
[ext_resource type="Script" path="res://main_menu.gd" id="3_klxlb"]
[ext_resource type="Texture2D" uid="uid://u078a8s5bj8l" path="res://Assets/book.png" id="3_s42sk"]

[sub_resource type="Theme" id="Theme_xifn2"]
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("1_cyn4c")
Label/colors/font_color = Color(0.0941176, 0.129412, 0.243137, 1)
Label/font_sizes/font_size = 56
Label/fonts/font = ExtResource("1_cyn4c")
RichTextLabel/colors/default_color = Color(0.0941176, 0.129412, 0.243137, 1)
RichTextLabel/font_sizes/normal_font_size = 36
RichTextLabel/fonts/normal_font = ExtResource("1_cyn4c")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xifn2")
script = ExtResource("3_klxlb")

[node name="BookBackground" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_left = -840.0
offset_top = -24.0
offset_right = 841.0
offset_bottom = 921.0
texture = ExtResource("3_s42sk")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 90
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 90

[node name="MenuContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/MenuContainer"]
layout_mode = 2
text = "Ranger's Journal"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="CreditsButton" type="Button" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="CreditsContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="CreditsLabel" type="RichTextLabel" parent="MarginContainer/CreditsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[font_size=56][center]Credits[/center][/font_size]
[ul]	\"Midnight Tale\" by Kevin MacLeod ([url=https://incompetech.com]incompetech.com[/url]). Licensed under Creative Commons: By Attribution 4.0 License ([url]http://creativecommons.org/licenses/by/4.0/[/url]).[/ul]
[ul]	\"EPIC-Collection book\" by Melissa Krautheim ([url]https://opengameart.org/content/epic-collection-book[/url]). Dedicated to the public domain through CC0 1.0 Universal ([url]https://creativecommons.org/publicdomain/zero/1.0/[/url]).[/ul]
[ul]	\"Comfortaa\" by Johann Aakerlund ([url]https://www.dafont.com/comfortaa.font[/url]). Licensed under SIL Open Font License Version 1.1 ([url]https://openfontlicense.org/open-font-license-official-text/[/url]).[/ul]
[ul]	\"Vividly\" by Tata ([url]https://www.dafont.com/vividly.font[/url]). Available for commerial and non-commercial use.[/ul]"

[node name="CreditsBackButton" type="Button" parent="MarginContainer/CreditsContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="MarginContainer/MenuContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/CreditsContainer/CreditsBackButton" to="." method="_on_credits_back_button_pressed"]
